--- a/Dockerfile.jetson
+++ b/Dockerfile.jetson
@@ -1,10 +1,13 @@
-FROM noetic-ros-base-l4t-r32.5.2
+FROM dustynv/ros:noetic-ros-base-l4t-r32.5.0
+
+# RUN sh -c 'echo "deb http://packages.ros.org/ros/ubuntu $(lsb_release -sc) main" > /etc/apt/sources.list.d/ros-latest.list'
+# RUN curl -s https://raw.githubusercontent.com/ros/rosdistro/master/ros.asc | apt-key add -
 
 # nvidia-container-runtime
-ENV NVIDIA_VISIBLE_DEVICES \
-    ${NVIDIA_VISIBLE_DEVICES:-all}
-ENV NVIDIA_DRIVER_CAPABILITIES \
-    ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics
+# ENV NVIDIA_VISIBLE_DEVICES \
+#     ${NVIDIA_VISIBLE_DEVICES:-all}
+# ENV NVIDIA_DRIVER_CAPABILITIES \
+#     ${NVIDIA_DRIVER_CAPABILITIES:+$NVIDIA_DRIVER_CAPABILITIES,}graphics
 
 RUN apt update && apt install -y \
     vim \
@@ -24,12 +27,12 @@ RUN apt-get install -y zsh wget
 RUN sh -c "$(wget https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh -O -)"
 RUN chsh -s /bin/zsh
 
-RUN apt install -y \
-    ros-noetic-robot-localization \
-    ros-noetic-map-server
+# RUN apt update && apt install -y \
+#     ros-noetic-robot-localization \
+#     ros-noetic-map-server
     
 RUN echo "source /opt/ros/noetic/setup.zsh" >> ~/.zshrc
 RUN echo "source /root/euro_ws/devel/setup.zsh" >> ~/.zshrc
-RUN echo "PS1=\"\[\033[1;32;1m\][\[\033[1;34;40m\]\u@\h:\[\033[0;36;40m\]\w\[\033[1;32;1m\]]\[\033[1;31;1m\]\$\[\033[1;36;1m\]\"" >> ~/.bashrc
+# RUN echo "PS1=\"\[\033[1;32;1m\][\[\033[1;34;40m\]\u@\h:\[\033[0;36;40m\]\w\[\033[1;32;1m\]]\[\033[1;31;1m\]\$\[\033[1;36;1m\]\"" >> ~/.bashrc
 
 CMD ["/bin/zsh"]
