--- a/Dockerfile.nvidiagpu
+++ b/Dockerfile.nvidiagpu
@@ -26,8 +26,19 @@ RUN chsh -s /bin/zsh
 
 RUN apt install -y \
     ros-noetic-robot-localization \
-    ros-noetic-map-server
-    
+    ros-noetic-map-server \
+    ros-noetic-tf2-sensor-msgs \
+    ros-noetic-navigation \
+    ros-noetic-teleop-twist-keyboard
+
+# for teb local planner
+RUN apt install -y \
+    ros-noetic-costmap-converter \
+    ros-noetic-mbf-costmap-core \
+    ros-noetic-mbf-msgs \
+    libsuitesparse-dev \
+    ros-noetic-libg2o
+
 RUN echo "source /opt/ros/noetic/setup.zsh" >> ~/.zshrc
 RUN echo "source /root/euro_ws/devel/setup.zsh" >> ~/.zshrc
 RUN echo "PS1=\"\[\033[1;32;1m\][\[\033[1;34;40m\]\u@\h:\[\033[0;36;40m\]\w\[\033[1;32;1m\]]\[\033[1;31;1m\]\$\[\033[1;36;1m\]\"" >> ~/.bashrc
